# SpeechEmotionRL

./: README.md  setup.py
Classes/: best_agent_shap_analyzer.py  ensemble_agent.py  gui.py  hyperparameter_optimization.py  setup.py  system_hyperparameter_comparison.py  test_evaluation.py  wav2vec2_feature_extractor.py
Classes/Main/: main.py
Classes/RL models/: ppo_trainer.py  qrdqn_trainer.py
Environment/: emotion_env.py
Netflix/: README.md
Netflix_Content_Clustering/: pyproject.toml
RL models/: a2c_trainer.py  dqn_trainer.py
Smart Irrigation System/: Env_Test.ipynb  model_comparison.py
Smart Irrigation System/agent/: a2c_model.py  dyna_Q_model.py
Smart Irrigation System/models/: a2c_corn_irrigation_v2_metadata.json  dqn_corn_irrigation_v1_metadata.json  dqn_corn_irrigation_v2_metadata.json  dqn_corn_irrigation_v4_metadata.json  dqn_corn_irrigation_v5_metadata.json  dqn_corn_irrigation_v6_metadata.json  ppo_corn_irrigation_v1_metadata.json  ppo_corn_irrigation_v2_metadata.json
Smart Irrigation System/utils/: ModelComparison.py  ModelVersionManager.py  TrainingVisualization.py
Smart_Irrigation_System/: A2C.ipynb  Model_Comparison.ipynb  README.md  dashboard.py  requirements.txt
Smart_Irrigation_System/agent/: dqn_model.py  ppo_model.py
Smart_Irrigation_System/comparison_results/: comparison_results.json
Smart_Irrigation_System/customEnv/: SimpleCornIrrigationEnv.py
Smart_Irrigation_System/models/: a2c_corn_irrigation_v1_metadata.json  (+7 more)
Speech_Emotion_Recognition/: Speech Emotion Recognition Poster  gui.py  requirements.txt  setup.py
(+15 files in other folders)
